Changed IFEO registry path.

--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -8,7 +8,7 @@ enableSched = 1
 schedule_window = auto
 request.ui_dispatch_app = ThreatHunting
 request.ui_dispatch_view = search
-search = `indextime` `sysmon` (event_id=12 OR event_id=13 OR event_id=14) (registry_key_path="*\\SOFTWARE\\Microsoft\\Windows NT\\CurrentVersion\\process_path File Execution Options\\LSASS.exe") \
+search = `indextime` `sysmon` (event_id=12 OR event_id=13 OR event_id=14) (registry_key_path="*\\SOFTWARE\\Microsoft\\Windows NT\\CurrentVersion\\Image File Execution Options\\LSASS.exe") \
 | eval mitre_category="Persistence" \
 | eval mitre_technique="Security Support Provider" \
 | eval mitre_technique_id="T1101" \
